View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023630 | Open CASCADE | OCCT:Visualization | public | 2012-12-11 17:56 | 2013-04-29 15:21 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023630: Incorrect NULL check in OpenGl_Workspace::EnableTexture() | ||||
Description | This statement in code is meaningless: > if (myTextureBound.IsNull() && myTextureBound == theTexture) | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Patch is ready for review in CR23630 branch. |
|
Branch CR23630 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR23630 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-12-11 17:56 | kgv | New Issue | |
2012-12-11 17:56 | kgv | Assigned To | => kgv |
2012-12-11 18:00 | kgv | Relationship added | child of 0023544 |
2012-12-11 18:00 | kgv | Note Added: 0022655 | |
2012-12-11 18:00 | kgv | Assigned To | kgv => san |
2012-12-11 18:00 | kgv | Status | new => resolved |
2012-12-12 11:28 |
|
Note Added: 0022670 | |
2012-12-12 11:28 |
|
Assigned To | san => bugmaster |
2012-12-12 11:28 |
|
Status | resolved => reviewed |
2012-12-12 15:14 |
|
Assigned To | bugmaster => mkv |
2012-12-13 14:13 |
|
Note Added: 0022692 | |
2012-12-13 14:13 |
|
Test case number | => Not needed |
2012-12-13 14:13 |
|
Assigned To | mkv => bugmaster |
2012-12-13 14:13 |
|
Status | reviewed => tested |
2012-12-18 10:45 | kgv | Changeset attached | => occt master bca1d6e2 |
2012-12-18 10:45 | kgv | Assigned To | bugmaster => kgv |
2012-12-18 10:45 | kgv | Status | tested => verified |
2012-12-18 10:45 | kgv | Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |