0023630: Incorrect NULL check in OpenGl_Workspace::EnableTexture()